[project]
name = "react-agent"
version = "0.0.1"
description = "Starter template for making a custom Reasoning and Action agent (using tool calling) in LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-tavily>=0.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anthropic==0.50.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "blockbuster==1.5.24",
    "boto3==1.38.0",
    "botocore==1.38.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "cryptography==44.0.2",
    "dataclasses-json==0.6.7",
    "distro==1.9.0",
    "Events==0.5",
    "fireworks-ai==0.15.12",
    "forbiddenfruit==0.1.4",
    "frozenlist==1.6.0",
    "grpcio==1.71.0",
    "h11==0.14.0",
    "httpcore==1.0.8",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "httpx-ws==0.7.2",
    "idna==3.10",
    "jiter==0.9.0",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema_rs==0.29.1",
    "langchain==0.3.24",
    "langchain-anthropic==0.3.12",
    "langchain-aws==0.2.21",
    "langchain-core==0.3.55",
    "langchain-fireworks==0.2.9",
    "langchain-openai==0.3.14",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.3.31",
    "langgraph-api==0.1.15",
    "langgraph-checkpoint==2.0.24",
    "langgraph-cli==0.2.6",
    "langgraph-prebuilt==0.1.8",
    "langgraph-runtime-inmem==0.0.6",
    "langgraph-sdk==0.1.66",
    "langsmith==0.3.33",
    "marshmallow==3.26.1",
    "multidict==6.4.3",
    "mypy_extensions==1.1.0",
    "numpy==1.26.4",
    "openai==1.75.0",
    "opensearch-py==2.8.0",
    "orjson==3.10.16",
    "ormsgpack==1.9.1",
    "packaging==24.2",
    "pillow==11.2.1",
    "propcache==0.3.1",
    "psycopg==3.2.6",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "pydantic_core==2.33.1",
    "PyJWT==2.10.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "s3transfer==0.12.0",
    "scipy==1.15.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.40",
    "sse-starlette==2.1.3",
    "starlette==0.46.2",
    "structlog==25.2.0",
    "tavily-python==0.5.4",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "typing_extensions==4.13.2",
    "tzdata==2025.2",
    "ujson==5.10.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "watchfiles==1.0.5",
    "wsproto==1.2.0",
    "xxhash==3.5.0",
    "yarl==1.20.0",
    "zstandard==0.23.0",
    "fastapi==0.115.12"
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.react_agent", "react_agent"]
[tool.setuptools.package-dir]
"langgraph.templates.react_agent" = "src/react_agent"
"react_agent" = "src/react_agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
    "pytest>=8.3.5",
]
